<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version">V 1.0</string>
    <string name="server_addr">http://120.24.208.201/hadlink/hadlink91_product/index.php?c=user</string>

    <string name="app_name">HDOnlineApp</string>
    <string name="app_name_cn">91车助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">没有找到符合条件的资源</string>
    
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>

    <!--main activity tab tag-->
    <string name="main_homepage_tab">homepage</string>
    <string name="main_shop_tab">shop</string>
    <string name="main_qa_tab">qa</string>
    <string name="main_profile_tab">profile</string>


    <string name="findservice_headbar_list">列表</string>
    <string name="findservice_headbar_map">地图</string>
    <string name="label_default">默认</string>
	<string name="recommend_to_friend">&#160;&#160;&#160;&#160;推荐给好友</string>
	<string name="give_us_the_score">&#160;&#160;&#160;&#160;给我们评分</string>
	<string name="propose">&#160;&#160;&#160;&#160;建议反馈</string>
	<string name="regarding_our">&#160;&#160;&#160;&#160;关于我们</string>
	<string name="user_agreement">&#160;&#160;&#160;&#160;用户协议</string>
	<string name="version_update">&#160;&#160;&#160;&#160;版本更新</string>
	<string name="contact_customer_service">&#160;&#160;&#160;&#160;联系客服</string>
	<string name="log_out">退出登录</string>
	
	<!-- 违章查询 -->
	<string name="input_car_no">请输入车牌号</string>
	<string name="input_fdj_no">请输入后4位发动机号</string>
	<string name="input_cj_no">请输入后6位车架号</string>
	<string name="query_remember_car_msg">记住爱车信息，方便下次查询</string>
	<string name="query_btn_query">查询</string>
	<string name="query_countrywide_hot">全国热门</string>
	<string name="query_city_title">违章查询-选城市</string>
	<!-- 我的 -->
	<string name="myself_login_hint">你还没登陆哦</string>
	<string name="myself_login_txt">立即登陆</string>
	<string name="myself_integral">我的积分</string>
	<string name="myself_my_car">我的爱车</string>
	<string name="myself_my_order">我的订单</string>
	<string name="myself_my_collect">我的收藏</string>
	<string name="myself_setting">设置</string>
</resources>
