<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <!-- 标题 -->


    <!-- 第一行 -->

    <LinearLayout
        android:id="@+id/query_query_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/query_query_city_select"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="查询城市"
            android:textSize="@dimen/query_edit_tv_size"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/query_query_city_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/query_edit_tv_size"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/addmycar_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/dotted_line" />

    <!-- 第二行 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.65"
            android:text="车牌号码"
            android:textSize="@dimen/query_edit_tv_size"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.7"
            android:background="@drawable/query_peccancy_text_style"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp" >

            <TextView
                android:id="@+id/query_query_city_cph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="@dimen/query_edit_tv_size"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/query_query_city_cph_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="@dimen/query_edit_tv_size"
                android:gravity="right"
                android:text="﹀" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.68"
            android:background="@drawable/query_peccancy_text_style"
            android:orientation="horizontal"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp" >

            <TextView
                android:id="@+id/query_query_city_cph_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="@dimen/query_edit_tv_size"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/query_query_city_cph_no_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="@dimen/query_edit_tv_size"
                android:text="﹀" />
        </LinearLayout>

        <EditText
            android:id="@+id/query_query_city_cph_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/query_peccancy_text_style"
            android:gravity="center_vertical"
            android:hint="@string/input_car_no"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/query_edit_tv_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dotted_line" />
    <!-- 第三行 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="发动机号"
            android:textSize="@dimen/query_edit_tv_size"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/query_query_fdj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/input_fdj_no"
            android:padding="5dp"
            android:textSize="@dimen/query_edit_tv_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/dotted_line" />
    <!-- 第四行 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="车架号码"
            android:textSize="@dimen/query_edit_tv_size"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/query_query_cjh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/input_cj_no"
            android:padding="5dp"
            android:textSize="@dimen/query_edit_tv_size" />
    </LinearLayout>
    <!-- 第五行 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/query_query_remember_checkbox"
            style="@style/query_query_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/query_remember_car_msg"
            android:padding="5dp"
            android:textSize="@dimen/query_edit_tv_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/query_query_submit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/query_submit_btn_selector"
        android:gravity="center"
        android:text="@string/query_btn_query"
        android:textColor="@color/white" />

</LinearLayout>
